adicionando novas paginas ao templates (pages, partials) e separando o header do body em html

--- a/djangoProjeto/recipes/templates/recipes/partials/head.html
+++ b/djangoProjeto/recipes/templates/recipes/partials/head.html
@@ -8,9 +8,18 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/brands.min.css" integrity="sha512-bSncow0ApIhONbz+pNI52n0trz5fMWbgteHsonaPk42JbunIeM9ee+zTYAUP1eLPky5wP0XZ7MSLAPxKkwnlzw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/solid.min.css" integrity="sha512-6/gTF62BJ06BajySRzTm7i8N2ZZ6StspU9uVWDdoBiuuNu5rs1a8VwiJ7skCz2BcvhpipLKfFerXkuzs+npeKA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Document</title>
+    <style>
+        *{
+            padding: 0;
+            margin: 0;
+            box-sizing: border-box; 
+        }
+        html{
+            font-size: 62.5%;
+
+        }
+        body{
+            font-size: 1.6rem; 
+        }
+    </style>
 </head>
-<body>
-    <h1>Olá Mundo!</h1>
-    
-</body>
-</html>
