--- a/djangoProjeto/recipes/templates/recipes/pages/home.html
+++ b/djangoProjeto/recipes/templates/recipes/pages/home.html
@@ -1,14 +1,13 @@
 {% include 'recipes/partials/head.html' %}
 
 <body>
-    <header class="main-container">
+    <header class="main-header-container">
         <div class="main-header container">
             <h1>
-                <a href="/">
+
+                <a class="main-logo" href="/">
                     <i class="fas fa-address-book"></i> Recipes {{name}}
                 </a>
-                
-
             </h1>
         </div>
     </header>
